applications/mail/mailcore-utils.yaml
# Deployment for mail core utils service
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mailman-core-utils
  namespace: mail
  labels:
    component: mail-core-utils
    app: mail-suit-service
spec:
  replicas: 1
  selector:
    matchLabels:
      component: mail-core-utils
      app: mail-suit-service
  template:
    metadata:
      labels:
        component: mail-core-utils
        app: mail-suit-service
    spec:
      # init container used to clone the repo and move it into the dir that core-utils will use.
      containers:
        - name: mailman-core-utils
          # Please ensure the image exists
          image: swr.cn-north-4.myhuaweicloud.com/opensourceway/common/mailman-core-utils:d99276c1aa59f19cde12217e7df57345223e4f51
          imagePullPolicy: "IfNotPresent"
          volumeMounts:
            - mountPath: /opt/mailman-utils/data_source
              name: mailman-core-utils
          command:
            - /bin/sh
            - -c
            - |
              cp -r /opt/mailman-utils/data_source/app-mailman/mail/templates  .;
              docker-entrypoint.sh python -u mailman-core-utils.py
              sleep infinity
      volumes:
        - name: mailman-core-utils
          emptyDir: {}
