applications/mail/mtaservice.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubernetes.io/elb.class: union
    kubernetes.io/elb.id: 9d356ff2-070e-445a-bcc1-c468b51e0213
    kubernetes.io/elb.lb-algorithm: ROUND_ROBIN
    kubernetes.io/elb.mark: "3"
  name: mailman-exim4-service
  namespace: mail
spec:
  ports:
  - port: 25
    name: exim4-port
    targetPort: 25
    protocol: TCP
  - port: 465
    name: exim4-port-2
    targetPort: 465
    protocol: TCP
  selector:
    component: mail-exim4-service
  sessionAffinity: None
  type: LoadBalancer

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: mail-suit-service
    component: mail-exim4-service
  name: mailman-exim4
  namespace: mail
spec:
  podManagementPolicy: OrderedReady
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: mail-suit-service
      component: mail-exim4-service
  serviceName: mail-suit-service
  template:
    metadata:
      labels:
        app: mail-suit-service
        component: mail-exim4-service
    spec:
      containers:
      - name: mailman-exim4
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/app-mailman/mailman-exim-new-build:3d97dff8206e4262c0fa2e218cdacb40e168c56a1672141405
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /opt/mailman/
          name: mailman-core-data
        - mountPath: /var/log/exim/
          name: mailman-exim4-log
        - mountPath: /etc/exim/passwd.ro
          name: mailman-secrets
          subPath: exim4_credential
        - mountPath: /etc/exim/dkim/openeuler.key.ro
          name: mta-dkim-secret
          subPath: dkim_key
        - name: exim4-tls-secret
          mountPath: /etc/exim/ssl_pool/openeuler.org.crt
          subPath: openeuler_org_crt
        - name: exim4-tls-secret
          mountPath: /etc/exim/ssl_pool/openeuler.org.key
          subPath: openeuler_org_key
        - name: exim-config
          mountPath: /etc/exim/exim.conf
          subPath: exim_conf
        command:
        - /bin/sh
        - -c
        - |
          cp /etc/exim/passwd.ro /etc/exim/passwd
          cp /etc/exim/dkim/openeuler.key.ro /etc/exim/dkim/openeuler.key
          chown root:exim /etc/exim/passwd /etc/exim/dkim/openeuler.key /etc/exim/ssl_pool/openeuler.org.crt /etc/exim/ssl_pool/openeuler.org.key
          chmod 755 /etc/exim/passwd /etc/exim/dkim/openeuler.key /etc/exim/ssl_pool/openeuler.org.crt /etc/exim/ssl_pool/openeuler.org.key
          mkdir -p /var/log/exim4
          exec tini -- exim -bd -v;
      volumes:
      - name: mailman-core-data
        persistentVolumeClaim:
          claimName: config-vol
      - name: mailman-exim4-log
        persistentVolumeClaim:
          claimName: exim-log-data
      - name: mta-dkim-secret
        secret:
          secretName: mailman-secrets
      - name: mailman-secrets
        secret:
          secretName: mailman-secrets
      - name: exim4-tls-secret
        secret:
          secretName: mailman-cert-secrets
      - name: exim-config
        configMap:
          name: exim-configmap
