applications/mail/suiteservice.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mail-suit-service
  name: mail-suit-service
  namespace: mail
spec:
  clusterIP: None
  selector:
    app: mail-suit-service
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
