applications/mail/webservice.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mailman-web-service
  namespace: mail
spec:
  ports:
  - port: 8000
    name: website-port-uwsgi-http
    targetPort: 8000
    protocol: TCP
  - port: 80
    name: website-port-http
    targetPort: 80
    protocol: TCP
  selector:
    component: mail-web-service
  type: ClusterIP

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mailman-web
  namespace: mail
  labels:
    app: mail-suit-service
    component: mail-web-service
spec:
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      component: mail-web-service
      app: mail-suit-service
  template:
    metadata:
      labels:
        component: mail-web-service
        app: mail-suit-service
    spec:
      containers:
      - name: mailman-web
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/app-mailman/mailman-web-new-build:84ad2d1f1301fa782d9a3de0310fcc6a1ef245701675127684
        imagePullPolicy: "Always"
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 5
          successThreshold: 1
          tcpSocket:
            port: 8000
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 5
          successThreshold: 1
          tcpSocket:
            port: 8000
          timeoutSeconds: 1
        resources:
          requests:
            cpu: 1000m
            memory: 2000Mi
          limits:
            cpu: 2000m
            memory: 8000Mi
        volumeMounts:
        - mountPath: /opt/mailman-web-static
          name: mailman-web-volume
      - image: swr.cn-north-4.myhuaweicloud.com/opensourceway/common/nginx:latest
        imagePullPolicy: IfNotPresent
        name: nginx-web
        volumeMounts:
        - mountPath: /etc/nginx/nginx.conf
          name: mailman-nginx-configmap-volume
          subPath: nginx.conf
        - mountPath: /etc/nginx/conf.d/default.conf
          name: mailman-nginx-configmap-volume
          subPath: default.conf
        - mountPath: /opt/mailman-web-static
          name: mailman-web-volume
      volumes:
      - emptyDir: {}
        name: mailman-web-volume
      - configMap:
          defaultMode: 420
          name: mailman-nginx-configmap
        name: mailman-nginx-configmap-volume
